[maven-release-plugin] prepare release common-spring-0.1

--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>libs.foreach.com</groupId>
 	<artifactId>common-spring</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<dependencies>
 		<!-- Logging -->
 		<dependency>
@@ -88,8 +86,8 @@
 		</repository>
 	</distributionManagement>
 	<scm>
-      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</connection>
-      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</developerConnection>
-      <url>http://www.foreach.com/</url>
+      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-spring-0.1</connection>
+      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-spring-0.1</developerConnection>
+      <url>http://www.foreach.com/tags/common-spring-0.1</url>
    </scm> 
 </project>
