--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -82,8 +82,13 @@
 		<repository>
 			<id>nexus</id>
 			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/content/repositories/releases</url>
+			<url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
 		</repository>
+		<snapshotRepository>
+			<id>nexus</id>
+			<name>Foreach nexus</name>
+			<url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
 	</distributionManagement>
 	<scm>
       <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</connection>
