--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>libs.foreach.com</groupId>
+	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-spring</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.1-SNAPSHOT</version>
 	<dependencies>
 		<!-- Logging -->
 		<dependency>
@@ -80,12 +80,12 @@
 	</properties>
 	<distributionManagement>
 		<repository>
-			<id>nexus</id>
+			<id>foreach-nexus</id>
 			<name>Foreach nexus</name>
 			<url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>nexus</id>
+			<id>foreach-nexus</id>
 			<name>Foreach nexus</name>
 			<url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
@@ -93,6 +93,5 @@
 	<scm>
       <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</connection>
       <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</developerConnection>
-      <url>http://www.foreach.com/</url>
-   </scm> 
+   </scm>
 </project>
