--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-spring</artifactId>
-	<version>0.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<dependencies>
 		<!-- Logging -->
 		<dependency>
@@ -91,7 +91,7 @@
 		</snapshotRepository>
 	</distributionManagement>
 	<scm>
-      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-spring-0.1</connection>
-      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-spring-0.1</developerConnection>
+      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</connection>
+      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</developerConnection>
    </scm>
 </project>
