--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -4,6 +4,11 @@
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-spring</artifactId>
 	<version>0.2-SNAPSHOT</version>
+	<parent>
+		<groupId>com.foreach.libs</groupId>
+		<artifactId>common-projects</artifactId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
 	<dependencies>
 		<!-- Logging -->
 		<dependency>
@@ -24,74 +29,4 @@
 			<version>3.0.5.RELEASE</version>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<reportPlugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.8</version>
-						</plugin>
-					</reportPlugins>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<distributionManagement>
-		<repository>
-			<id>foreach-nexus</id>
-			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>foreach-nexus</id>
-			<name>Foreach nexus</name>
-			<url>http://java.libs.foreach.com/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<scm>
-      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</connection>
-      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/common-spring</developerConnection>
-   </scm>
 </project>
