--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-projects</artifactId>
-	<version>0.2-SNAPSHOT</version>
+	<version>0.2</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>common-spring</module>
@@ -78,7 +77,7 @@
 		</snapshotRepository>
 	</distributionManagement>
 	<scm>
-      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/</connection>
-      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/</developerConnection>
+      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-projects-0.2</connection>
+      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/tags/common-projects-0.2</developerConnection>
    </scm>
 </project>
