--- a/common-web/pom.xml
+++ b/common-web/pom.xml
@@ -15,5 +15,15 @@
 			<artifactId>common-spring</artifactId>
 			<version>0.3-SNAPSHOT</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.4</version>
+        </dependency>
+    </dependencies>
 </project>
