--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<modules>
 		<module>common-spring</module>
 		<module>common-web</module>
+        <module>common-hibernate</module>
 	</modules>
 	<build>
 		<plugins>
