--- a/common-hibernate/pom.xml
+++ b/common-hibernate/pom.xml
@@ -15,5 +15,10 @@
             <artifactId>hibernate-core</artifactId>
             <version>3.3.1.GA</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>3.0.5.RELEASE</version>
+		</dependency>
     </dependencies>
 </project>
