--- a/common-mybatis/pom.xml
+++ b/common-mybatis/pom.xml
@@ -11,6 +11,11 @@
 	</parent>
 	<dependencies>
 		<dependency>
+			<groupId>com.foreach.libs</groupId>
+			<artifactId>common-spring</artifactId>
+			<version>0.3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>3.0.4</version>
