--- a/common-hibernate/pom.xml
+++ b/common-hibernate/pom.xml
@@ -15,6 +15,11 @@
             <artifactId>hibernate-core</artifactId>
             <version>3.3.1.GA</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
