--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -18,9 +18,9 @@
 		</dependency>
 		<!-- Apache Commons -->
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
 		</dependency>
 		<!-- Spring -->
 		<dependency>
@@ -42,7 +42,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.1.0.Final</version>
+			<version>4.2.0.Final</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -59,7 +59,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.8.5</version>
+			<version>1.9.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
