--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-projects</artifactId>
@@ -80,7 +81,7 @@
 		</snapshotRepository>
 	</distributionManagement>
 	<scm>
-      <connection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/</connection>
-      <developerConnection>scm:svn:svn://192.168.2.153/foreach-java/common-projects/trunk/</developerConnection>
-   </scm>
+		<connection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</connection>
+		<developerConnection>scm:git:http://stash.foreach.be/scm/fe/java-common-libraries.git</developerConnection>
+	</scm>
 </project>
