--- a/common-hibernate/pom.xml
+++ b/common-hibernate/pom.xml
@@ -3,11 +3,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-hibernate</artifactId>
-	<version>0.4-SNAPSHOT</version>
+	<version>0.5</version>
 	<parent>
 		<groupId>com.foreach.libs</groupId>
 		<artifactId>common-projects</artifactId>
-		<version>0.5-SNAPSHOT</version>
+		<version>0.5</version>
 	</parent>
 	<dependencies>
 		<dependency>
