--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-projects</artifactId>
@@ -10,8 +11,8 @@
 		<module>common-hibernate</module>
 		<module>common-mybatis</module>
 		<module>common-web</module>
-        <module>common-test</module>
-    </modules>
+		<module>common-test</module>
+	</modules>
 	<build>
 		<plugins>
 			<plugin>
@@ -25,20 +26,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<reportPlugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-javadoc-plugin</artifactId>
-							<version>2.8</version>
-						</plugin>
-					</reportPlugins>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>2.8</version>
 				<executions>
@@ -47,6 +34,13 @@
 						<goals>
 							<goal>jar</goal>
 						</goals>
+					</execution>
+					<execution>
+						<id>aggregate</id>
+						<goals>
+							<goal>aggregate</goal>
+						</goals>
+						<phase>package</phase>
 					</execution>
 				</executions>
 			</plugin>
@@ -61,6 +55,52 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<inherited>false</inherited>
+				<executions>
+					<execution>
+						<phase>deploy</phase>
+						<configuration>
+							<target>
+								<property name="deploy.site.location"
+								          value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/"/>
+								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties"/>
+
+								<delete dir="target/javadoc-deploy/${project.artifactId}-${project.version}"
+								        failonerror="false"/>
+
+								<copy todir="target/javadoc-deploy/${project.artifactId}-${project.version}">
+									<fileset dir="target/site/apidocs"/>
+								</copy>
+
+								<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}"
+								     trust="yes">
+									<fileset dir="target/javadoc-deploy">
+										<include name="**/*"/>
+									</fileset>
+								</scp>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.jcraft</groupId>
+						<artifactId>jsch</artifactId>
+						<version>0.1.50</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.ant</groupId>
+						<artifactId>ant-jsch</artifactId>
+						<version>1.8.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
