--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
 	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<springVersion>[3.1.1.RELEASE,)</springVersion>
+		<springVersion>3.1.1.RELEASE</springVersion>
 	</properties>
 	<distributionManagement>
 		<repository>
