--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -17,6 +17,12 @@
 			<version>1.2.16</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
+			<scope>provided</scope>
+		</dependency>
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
