--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 		<module>common-mybatis</module>
 		<module>common-web</module>
 		<module>common-test</module>
-	</modules>
+        <module>common-synchronizer</module>
+    </modules>
 	<build>
 		<plugins>
 			<plugin>
