--- a/common-synchronizer/pom.xml
+++ b/common-synchronizer/pom.xml
@@ -33,15 +33,15 @@
             <version>1.4.1</version>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>[1.6.1,)</version>
-        </dependency>
+      			<groupId>org.slf4j</groupId>
+      			<artifactId>slf4j-api</artifactId>
+      			<version>[1.6.1,)</version>
+      		</dependency>
+      		<dependency>
+      			<groupId>org.mockito</groupId>
+      			<artifactId>mockito-all</artifactId>
+      			<version>1.9.0</version>
+      		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
@@ -58,6 +58,12 @@
             <version>${springVersion}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 
