--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -76,5 +76,11 @@
 			<version>${springVersion}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
