--- a/common-synchronizer/pom.xml
+++ b/common-synchronizer/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>common-projects</artifactId>
         <groupId>com.foreach.libs</groupId>
-        <version>0.8-SNAPSHOT</version>
+        <version>0.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
