--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -22,6 +22,11 @@
 			<version>1.0.13</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>[1.6.1,)</version>
+        </dependency>
 		<!-- Apache Commons -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -76,5 +81,11 @@
 			<version>${springVersion}</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 </project>
