--- a/common-web/pom.xml
+++ b/common-web/pom.xml
@@ -32,6 +32,11 @@
 			<version>1.2.16</version>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>[1.6.1,)</version>
+        </dependency>
 		<!-- testing -->
 		<dependency>
 			<groupId>junit</groupId>
