--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>common-projects</artifactId>
 		<groupId>com.foreach.libs</groupId>
-		<version>0.9-SNAPSHOT</version>
+		<version>0.9</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
