--- a/common-spring/src/main/resources/com/foreach/common/spring/validators/ValidationMessages.properties
+++ b/common-spring/src/main/resources/com/foreach/common/spring/validators/ValidationMessages.properties
@@ -1,3 +1,3 @@
-AtLeastOneNotNullField = at least one field may not be null
+com.foreach.common.spring.validators.AtLeastOneNotNullField.message = at least one field may not be null
 ISBN = invalid ISBN
-MultipleEmails = contains at least one not well-formed e-mail address
+com.foreach.common.spring.validators.MultipleEmails.message = contains at least one not well-formed e-mail address
