--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.foreach.libs</groupId>
 	<artifactId>common-projects</artifactId>
@@ -66,18 +67,20 @@
 						<phase>deploy</phase>
 						<configuration>
 							<target>
-								<property name="deploy.site.location" value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/" />
-								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties" />
+								<property name="deploy.site.location"
+								          value="foreach@192.168.2.91:/var/www2/java.libs.foreach.com/sites/common-projects/"/>
+								<loadproperties srcfile="${user.home}/.foreach/foreach-buildserver.properties"/>
 
-								<delete dir="target/javadoc-deploy/${project.version}" failonerror="false" />
+								<delete dir="target/javadoc-deploy/${project.version}" failonerror="false"/>
 
 								<copy todir="target/javadoc-deploy/${project.version}">
-									<fileset dir="target/site/apidocs" />
+									<fileset dir="target/site/apidocs"/>
 								</copy>
 
-								<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}" trust="yes">
+								<scp todir="${deploy.site.location}" keyfile="${keyfile}" passphrase="${passphrase}"
+								     trust="yes">
 									<fileset dir="target/javadoc-deploy">
-										<include name="**/*" />
+										<include name="**/*"/>
 									</fileset>
 								</scp>
 							</target>
@@ -104,7 +107,7 @@
 	</build>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<springVersion>3.1.1.RELEASE</springVersion>
+		<springVersion>4.0.8.RELEASE</springVersion>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -129,7 +132,32 @@
 			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
+				<artifactId>spring-core</artifactId>
+				<version>${springVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-beans</artifactId>
+				<version>${springVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context</artifactId>
+				<version>${springVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-context-support</artifactId>
+				<version>${springVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
 				<artifactId>spring-jdbc</artifactId>
+				<version>${springVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-webmvc</artifactId>
 				<version>${springVersion}</version>
 			</dependency>
 			<dependency>
@@ -140,7 +168,7 @@
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
-				<version>3.3.2</version>
+				<version>3.1</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-dbcp</groupId>
