--- a/common-spring/pom.xml
+++ b/common-spring/pom.xml
@@ -71,10 +71,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- Mail -->
+		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4.1</version>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
