Switch file-manager-module to the new Azure SDK:
https://github.com/Azure/azure-sdk-for-java/blob/main/sdk/storage/azure-storage-blob/migrationGuides/V8_V12.md

Co-authored-by: "Davy Verstappen <davy.verstappen@iodigital.com>"

--- a/file-manager-module-test/pom.xml
+++ b/file-manager-module-test/pom.xml
@@ -18,6 +18,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-storage-blob</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>com.foreach.across.modules</groupId>
 			<artifactId>file-manager-module</artifactId>
 			<version>${revision}</version>
@@ -74,10 +79,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-aws-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.microsoft.azure</groupId>
-			<artifactId>azure-storage</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.testcontainers</groupId>
