--- a/pom.xml
+++ b/pom.xml
@@ -177,6 +177,23 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>com.amazonaws</groupId>
+				<artifactId>aws-java-sdk-bom</artifactId>
+				<version>1.11.1034</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>com.azure</groupId>
+				<artifactId>azure-sdk-bom</artifactId>
+				<version>1.2.21</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
 			<dependency>
 				<groupId>com.foreach.libs</groupId>
 				<artifactId>common-concurrent</artifactId>
@@ -209,11 +226,28 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.testcontainers</groupId>
-				<artifactId>testcontainers-bom</artifactId>
-				<version>${testcontainers-bom.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
+				<groupId>com.google.code.findbugs</groupId>
+				<artifactId>jsr305</artifactId>
+				<version>3.0.2</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>32.1.3-jre</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.mockrunner</groupId>
+				<artifactId>mockrunner-jdbc</artifactId>
+				<version>2.0.7</version>
+				<scope>test</scope>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<dependency>
@@ -236,6 +270,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.checkerframework</groupId>
+				<artifactId>checker-qual</artifactId>
+				<version>3.42.0</version>
+			</dependency>
+
+			<dependency>
 				<groupId>org.mybatis</groupId>
 				<artifactId>mybatis</artifactId>
 				<version>3.5.16</version>
@@ -248,28 +288,17 @@
 			</dependency>
 
 			<dependency>
-				<groupId>com.mockrunner</groupId>
-				<artifactId>mockrunner-jdbc</artifactId>
-				<version>2.0.7</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>com.amazonaws</groupId>
-				<artifactId>aws-java-sdk-bom</artifactId>
-				<version>1.11.1034</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-aws-core</artifactId>
 				<version>2.2.6.RELEASE</version>
 			</dependency>
+
 			<dependency>
-				<groupId>com.microsoft.azure</groupId>
-				<artifactId>azure-storage</artifactId>
-				<version>8.6.6</version>
+				<groupId>org.testcontainers</groupId>
+				<artifactId>testcontainers-bom</artifactId>
+				<version>${testcontainers-bom.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 
 			<!-- TODO: Delete Across dependencies: -->
