--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ utest:backend:
     - if [[ -f ci-before.sh ]]; then ./ci-before.sh; fi
     - apt-get update
     - apt-get -y install gpg
-    - gpg --pinentry-mode loopback --passphrase $ACROSS_GPG_PASSPHRASE --import $ACROSS_GPG_PRIVATE_KEY
+    - gpg --pinentry-mode loopback --passphrase $MAVEN_GPG_PASSPHRASE --import $MAVEN_GPG_PRIVATE_KEY
     - gpg --list-keys
   script:
     # For reproducible builds, we have to run the build twice:
